atualização da pagina

--- a/index.html
+++ b/index.html
@@ -9,5 +9,19 @@
     <h1>olaa</h1>
     <h2>poxa vida</h2>
     <p>ola doiss</p>
+
+    <!--esse é um comentario -->
+
+    <ul>
+        <li>sem</li>
+        <li>nu</li>
+        <li>mero</li>
+    </ul>
+
+    <ol>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ol>
 </body>
 </html>
